css/style.css
/* Google Fonts */
@import url(https://fonts.googleapis.com/css?family=Permanent+Marker|Roboto+Slab:400,700|Open+Sans:300,400);
/* CSS Animations */
@import url(animations.css);
@import url(cyo.css);

* {
  box-sizing: border-box;
}

/* Main */
body {
  background-image: url("../img/squared_metal.png");
  font-family: 'Roboto Slab', serif;
  color: #2574A9;
  text-align: center;
}

/* Header */
h1 {
  font-family: 'Permanent Marker', cursive;
  font-size: 3.5rem;
  margin: 10px auto;
}

.fa-plane {
  transform: rotate(45deg);
}

.fly {
  animation: fly 5s ease-in-out 1;
}

/* Buttons & Controls */
button {
  background-color: #2574A9;
  width: 105px;
  color: #fff;
  font-size: 0.9rem;
  border: none;
  padding: 1.5%;
  margin: 0 0.5% 1.5% 0.5%;
  border-radius: 5px;
}

button:focus {
  outline: none;
}

#reset, .addMore {
  background-color: #6C7A89;
}

#random {
  background-color: #F64747;
}

#flip {
  background-color: #019875;
}

#mark_complete {
  margin-left: 6%;
}

label {
  white-space: nowrap;
}

/* Flashcard */
#flashcard {
  width: 60%;
  min-height: 350px;
  background-color: #fff;
  margin: 10px auto;
  padding: 5% 3% 0 3%;
  border-top: solid 5px #F64747;
  border-radius: 3px;
  position: relative;
}

.top_row {
  position: absolute;
  display: inline-block;
  color: #6C7A89;
  margin: 0;
}

.topic {
  top: 5px;
  left: 5px;
}

.count {
  width: 50px;
  height: 50px;
  top: 5px;
  right: 5px;
  background-color: #6C7A89;
  color: #fff;
  border-radius: 100%;
  padding: 2%;
}

#controls {
  position: absolute;
  bottom: 10px;
  width: 87%;
}

.mark_complete_container {
  display: inline-block;
  width: 150px;
  padding: 1% 0;
}

#front_side, #back_side {
  font-size: 3rem;
  width: 87%;
  position: absolute;
  margin-top: 1%;
}

#back_side {
  color: #6C7A89;
  font-size:1.5rem;
}

#front_side p, #back_side p {
  margin-top: 1%;
}

i {
  padding: 1%;
}

/* Switch Topic */
#switch_topic {
  width: 50%;
  margin: 0 auto;
  position: relative;
  height: 160px;
}

.topic1, .topic2, .create_flashcards {
  position: absolute;
  display: inline-block;
  width: 32.5%;
  height: 100px;
  margin: 0 1%;
  padding: 1%;
  background-color: #6C7A89;
  color: #fff;
  border-radius: 3px;
  overflow: hidden;
  text-overflow: ellipsis;
  transition: background-color 0.3s ease-in;
}

.topic1 {
  left: 0;
  border-top: solid 5px #F64747;
}

.topic1:hover {
  background-color: #F64747;
}

.topic2 {
  left: 33%;
  border-top: solid 5px #F39C12;
}

.topic2:hover {
  background-color: #F39C12;
}

.create_flashcards {
  left: 66%;
  border-top: solid 5px #019875;
}

.create_flashcards:hover {
  background-color: #019875;
}

/* Keyboard Shortcuts */
#keyboard_shortcuts {
  background-color: #2574A9;
  color: #fff;
  margin: 0 auto 5%;
  padding: 1%;
  border-radius: 3px;
  width: 50%;
}

#keyboard_shortcuts li {
  list-style: none;
  text-align: left;
  display: inline-block;
  width: 48%;
  padding: 0.5%;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
}

#keyboard_shortcuts h3 {
  margin: 0;
  padding: 1.5% 0;
  border-bottom: 1px solid #fff;
}

#keyboard_shortcuts li:last-child {
  width: 96%;
}

/* Hide Class */
.hide {
  display: none;
}

/* Media Queries */
@media screen and (max-width: 575px) {
    #cyo label, #cyo input[type="text"] {
      display: block;
      margin: 0 auto 2%;
    }
}


@media screen and (max-width: 660px) {

  #flashcard {
    min-height: 500px;
  }

  #back_side {
    margin-top: 20px;
  }

  .topic1, .topic2, .create_flashcards {
  position: static;
  width: 100%;
  height: 70px;
  margin: 0 auto;
  }

  #switch_topic {
    height:275px;
  }

  #keyboard_shortcuts ul {
    padding-left: 0;
  }

  #keyboard_shortcuts li {
    width: 100%;
    text-align: center;
  }

  button {
    display: inline-block;
    width: 25%;
    padding: 2.5%;
    margin: 0.5%;
  }

  i::before {
    display: none;
  }

  #front_side .finishMsg {
    font-size: 1.5rem;
  }
}

@media screen and (max-width: 1000px) {
  #flashcard, #keyboard_shortcuts, #switch_topic, #cyo {
    width: 85%;
  }

  button, #controls label {
    font-size: 0.8rem;
  }
}

